--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5433/books-store
 spring.datasource.username=store_admin
 spring.datasource.password=iamroot
 spring.datasource.driver-class-name=org.postgresql.Driver
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
